--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 
 [packages]
 flask = "*"
-falsk-sqlalchemy = "*"
+flask-sqlalchemy = "==2.3.2"
 psycopg2 = "*"
 flask-migrate = "*"
 flask-bcrypt = "*"
